# ingestor-reader-v2

./: .dockerignore  .gitignore  .pylintrc  DOCKER.md  Dockerfile  LAMBDA.md  README.md  pyproject.toml  response.json  test-event.json  trust-policy.json
.github/workflows/: README.md  deploy.yml
certs/: README.md  cacert.pem
config/appconfig/: local.py  production.py  staging.py
config/datasets/: bcra_infomondia.yml  bcra_infomondia_series.yml  bcra_rem.yml  indec_ipc.yml
docs/: CONSOLIDATION_RESILIENCE.md  DATA_FLOW.md  FLOW_SEQUENCE.md  LOCKS.md  PIPELINE_FLOW_DIAGRAM.md  RESILIENCE_IMPLEMENTATION.md  RESTART_SCENARIOS.md  S3_STORAGE_FLOW.md  S3_STRUCTURE.md
ingestor_reader/: __init__.py
ingestor_reader/app/: lambda_handler.py  main.py
ingestor_reader/domain/: __init__.py
ingestor_reader/domain/entities/: app_config.py  dataset_config.py  manifest.py  run.py
ingestor_reader/domain/plugins/: base.py
ingestor_reader/domain/services/: consolidation_service.py  delta_service.py  pipeline_service.py
ingestor_reader/infra/: __init__.py  parquet_io.py  s3_catalog.py  s3_storage.py
ingestor_reader/infra/common/: __init__.py  clock.py  config.py  dataframe_utils.py  errors.py  hash_utils.py  logger.py  paths.py  series.py
ingestor_reader/use_cases/: __init__.py  run_pipeline.py
scripts/: read_latest_dataset.py
tests/: test_consolidation.py  test_delta_service.py  test_dynamodb_lock.py  test_pipeline_e2e.py  test_pipeline_locks.py  test_plugins_registry.py  test_publish_version_resilience.py  test_s3_catalog_paths.py  test_write_events_resilience.py
(+47 files in other folders)
